--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "build": "vite build --base=/alone-with-myself/",
     "test": "vitest",
     "test:ci": "vitest run --coverage",
-    "lint": "eslint ./src/**/* --ext .ts,.tsx",
-    "lint:fix": "eslint --fix ./src/**/* --ext .ts,.tsx",
     "test:unused-exports": "ts-unused-exports tsconfig.json"
   },
   "repository": {
@@ -24,32 +22,26 @@
   "sideEffects": false,
   "homepage": "https://github.com/Zilarion/alone-with-myself#readme",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@vitest/coverage-c8": "^0.26.3",
-    "eslint": "^8.4.1",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-modules-newline": "^0.0.6",
-    "eslint-plugin-modules-newlines": "^0.0.7",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jsdom": "^20.0.3",
-    "ts-unused-exports": "^9.0.0",
-    "typescript": "^4.3.5",
-    "vite": "^4.0.3",
-    "vite-plugin-solid": "^2.4.0",
-    "vitest": "^0.26.3"
+    "@testing-library/jest-dom": "^6.9.1",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@vitest/coverage-c8": "^0.33.0",
+    "jsdom": "^27.2.0",
+    "ts-unused-exports": "^9.0.5",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "vite-plugin-solid": "^2.11.10",
+    "vitest": "^4.0.14"
   },
   "dependencies": {
-    "@formatjs/intl": "^2.5.1",
+    "@formatjs/intl": "^3.1.8",
     "@hope-ui/solid": "^0.6.7",
-    "@solidjs/router": "^0.6.0",
     "@stitches/core": "^1.2.8",
-    "@suid/icons-material": "^0.5.0",
+    "@suid/icons-material": "^0.9.0",
+    "@tanstack/router-plugin": "^1.139.10",
+    "@tanstack/solid-router": "^1.139.10",
     "normalize.css": "^8.0.1",
-    "solid-js": "^1.6.2",
-    "solid-transition-group": "^0.0.10"
+    "solid": "^0.2.1",
+    "solid-js": "^1.9.10",
+    "solid-transition-group": "^0.3.0"
   }
 }
